fixed span visibility when closing sidebar

--- a/app/components/Sidebar/styles.css
+++ b/app/components/Sidebar/styles.css
@@ -1,4 +1,4 @@
-body {
+:root {
   --main-bg: #f5f4fd;
   --item-hover: #f9f8fb;
   --main-container-bg: #fff;
